- Updated logo (header and footer ) text and design - Fixed footer size/ alignment according to the design - Added social icons

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,38 +62,35 @@ input[type="number"]::-webkit-outer-spin-button {
   color: #f5f5f5;
 }
 
-.navBarText {
-  font-family: "Sora";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
 
-  color: #f5f5f5;
-
-  text-align: center;
-  letter-spacing: -0.08px;
-
-  color: white;
-}
-
-.navBarLogoText {
+.logo-text {
+  display: flex;
+  align-items: start;
   font-family: "000 webfont";
   font-style: normal;
   font-weight: 400;
-  font-size: 45px;
-
+  font-size: 2.813rem;
   text-align: center;
   letter-spacing: -0.08px;
   color: white;
 }
 
+.logo-addon {
+  font-family: "000 webfont";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.563rem !important;
+  color: #BDBDBD;
+  margin-left: 0.459rem;
+  line-height: 3.875rem;
+}
 .navBold {
   font-family: "000 webfont";
   font-weight: 700;
 }
 
-.navBarText:hover {
+.navBarText:hover,
+.logo-text:hover {
   text-decoration: none;
   color: white;
 }
